"Doctor-Registration added"

--- a/src/app/live-queue-details/live-queue-details.component.css
+++ b/src/app/live-queue-details/live-queue-details.component.css
@@ -169,5 +169,7 @@ grid-row: 1; */
     background-color: #D3D3D3;
     height: 100px;
 }
-
+::ng-deep.mat-dialog-container {
+    background-color: white;
+}
     
