--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+
+<mat-progress-bar
+*ngIf="isLoading"
+mode="indeterminate"
+color="warn"
+style="position: absolute; top: 0; z-index: 100;"
+>
+</mat-progress-bar> 
+
+<router-outlet id="mainRouter" ></router-outlet>
+
+
+
