--- a/src/app/live-queue/live-queue.component.html
+++ b/src/app/live-queue/live-queue.component.html
@@ -1,57 +1,120 @@
-<mat-card id="queueComponent">
-    <!-- <mat-card-header>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dr. Aviraj Rajput</mat-card-subtitle>
-        <img src='assets/imgs/{{live_image}}' class="live-image" />
-    </mat-card-header> -->
+<div fxLayout="column">
 
-    <mat-card-content (click)="goToQueueDetails()">
-        <div fxLayout="column" class="queue-box-container">
-            <div fxLayout="row" id="row1">
-                <label id="dateTimeLabel" class="content-header-label">Queue Sheduled</label>
-                <!-- <div class="live-indicator"><label id="liveLabel">Live</label></div> -->
+    <ng-container *ngIf="!isKYCFilled">
+            <div fxLayout="row" fxLayoutGap="10px" fxFlexOffset="15px" fxLayoutAlign="center center">
+                <mat-label class="no-kyc-label">*Before going live plese complete your registration</mat-label> 
+                <button mat-raised-button (click)="openKycForm()">complete now</button>
             </div>
-            <div fxLayout="row" id="row2">
-                <div fxLayout="row" class="content-text-div-left">
-                    <label class="content-text-label">Status</label>
-                    <div class="live-status-container">
-                        <label class="live-status-class">Live</label>
+    </ng-container>
+
+    <ng-container *ngIf="isKYCFilled">
+        <ng-container *ngIf="!isVarified">
+            <div fxLayout="row" fxLayoutGap="10px" fxFlexOffset="15px" fxLayoutAlign="center center">
+                <mat-label class="no-kyc-label">*We are currently verifying your account you will be live after verification process complete</mat-label>                 
+            </div>
+        </ng-container>
+    </ng-container>
+
+    <mat-label class="header-label">Live Queues</mat-label> 
+    <mat-card id="queueComponent">
+    
+        <mat-card-content (click)="goToQueueDetails()">
+            <div fxLayout="column" class="queue-box-container">
+                <div fxLayout="row" id="row1">
+                    <label id="dateTimeLabel" class="content-header-label">Queue Sheduled</label>
+                    <!-- <div class="live-indicator"><label id="liveLabel">Live</label></div> -->
+                </div>
+                <div fxLayout="row" id="row2">
+                    <div fxLayout="row" class="content-text-div-left">
+                        <label class="content-text-label">Status</label>
+                        <div class="live-status-container">
+                            <label class="live-status-class">Live</label>
+                        </div>
+    
+    
                     </div>
-
-
+                    <div fxLayout="row" class="content-text-div-right">
+                        <label class="content-text-label">Booking Starting</label>
+                        <label class="content-text-value">9:00 AM Today (1 hr 30 min 58 sec)</label>
+                    </div>
+    
                 </div>
-                <div fxLayout="row" class="content-text-div-right">
-                    <label class="content-text-label">Booking Starting</label>
-                    <label class="content-text-value">9:00 AM Today (1 hr 30 min 58 sec)</label>
+    
+                <div fxLayout="row" id="row2">
+                    <div fxLayout="row" class="content-text-div-left">
+                        <label class="content-text-label">Fees</label>
+                        <label class="content-text-value">&#8377; 251</label>
+                    </div>
+                    <div fxLayout="row" class="content-text-div-right">
+                        <label class="content-text-label">Consulting Starting</label>
+                        <label class="content-text-value">11:00 AM Today (1 hr 30 min 58 sec)</label>
+                    </div>
                 </div>
-
-            </div>
-
-            <div fxLayout="row" id="row2">
-                <div fxLayout="row" class="content-text-div-left">
-                    <label class="content-text-label">Fees</label>
-                    <label class="content-text-value">&#8377; 251</label>
-                </div>
-                <div fxLayout="row" class="content-text-div-right">
-                    <label class="content-text-label">Consulting Starting</label>
-                    <label class="content-text-value">11:00 AM Today (1 hr 30 min 58 sec)</label>
-                </div>
-            </div>
-            <div fxLayout="row" id="row2">
-                <div fxLayout="row" class="content-text-div-left">
-                    <label class="content-text-label">Patient Limit</label>
-                    <label class="content-text-value">800</label>
-                </div>
-                <div fxLayout="row" class="content-text-div-right">
-                    <label class="content-text-label">Live queue size</label>
-                    <label class="content-text-value">270</label>
+                <div fxLayout="row" id="row2">
+                    <div fxLayout="row" class="content-text-div-left">
+                        <label class="content-text-label">Patient Limit</label>
+                        <label class="content-text-value">800</label>
+                    </div>
+                    <div fxLayout="row" class="content-text-div-right">
+                        <label class="content-text-label">Live queue size</label>
+                        <label class="content-text-value">270</label>
+                    </div>
                 </div>
             </div>
-        </div>
-    </mat-card-content>
+        </mat-card-content>
+    
+        <!-- <mat-card-actions></mat-card-actions>
+        <mat-card-footer></mat-card-footer> -->
+    </mat-card>
+    <mat-label class="header-label">Live Payments</mat-label> 
+    <table mat-table
+           [dataSource]="dataSource" multiTemplateDataRows
+           class="mat-elevation-z8"
+           fxFlex="1 1 auto"
+           >
+      <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+        <th mat-header-cell *matHeaderCellDef>{{column}}</th>
+        <td mat-cell *matCellDef="let element">
 
-    <!-- <mat-card-actions></mat-card-actions>
-    <mat-card-footer></mat-card-footer> -->
-</mat-card>
+            <ng-container *ngIf="column === 'status'">
+                <mat-label  [ngClass]="{'authorized-status-label': element.status === 'Authorized', 'completed-status-label': element.status === 'Completed', 'failed-status-label': element.status === 'Failed'}">
+                    {{element[columnMapper[column]]}} 
+                </mat-label> 
+            </ng-container>
+            <ng-container *ngIf="column !== 'status'">
+                {{element[columnMapper[column]]}} 
+            </ng-container>
+                  
+        </td>
+      </ng-container>
+    
+      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+          <div class="example-element-detail"
+               [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-diagram">
+              <div class="example-element-position"> {{element.payeeName}} </div>
+              <div class="example-element-symbol"> {{element.symbol}} </div>
+              <div class="example-element-name"> {{element.payeeName}} </div>
+              <div class="example-element-weight"> {{element.weight}} </div>
+            </div>
+            <div class="example-element-description">
+              {{element.description}}
+              <span class="example-element-description-attribution"> -- Wikipedia </span>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+          class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="expandedElement = expandedElement === element ? null : element">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    </table>
+</div>
 
-<app-main-dashboard></app-main-dashboard>
+<!-- <app-main-dashboard></app-main-dashboard> -->
