--- a/src/app/queues/queues.component.css
+++ b/src/app/queues/queues.component.css
@@ -5,16 +5,26 @@
 }
 
 .queue-list{
+   margin:  10px 20px 10px 20px;
+   widows: 100%;
+}
+#list-wrapper{
     width: 100%;
     height: 100%;
-    position: absolute;
+}
+.header-label{
+    font-size: 20px;
+    font-family: roboto-bold;
+    margin-left: 25px;
+    margin-top: 25px;
 }
 .list-item{
     height: fit-content;
+    margin-top: 10px;
 }
 #queueComponent{
-    margin: 10px;
     height: fit-content;
+    width: 100%;
     width: 100%;
 }
 
