--- a/src/app/queues/queues.component.html
+++ b/src/app/queues/queues.component.html
@@ -1,61 +1,120 @@
 <div id="parent-div">
-    <mat-list role="list" fxLayout="column" class="queue-list">
-        <mat-list-item *ngFor="let queue of queues" class="list-item">
-            <mat-card id="queueComponent">
-               
-                <mat-card-content >
-                    <div fxLayout="column" class="queue-box-container">
-                        <div fxLayout="row" id="row1">
-                            <label id="dateTimeLabel" class="content-header-label">Queue Sheduled</label>
-                            <!-- <div class="live-indicator"><label id="liveLabel">Live</label></div> -->
-                        </div>
-                        <div fxLayout="row" id="row2">
-                            <div fxLayout="row" class="content-text-div-left">
-                                <label class="content-text-label">Status</label>
-                                <div class="live-status-container">
-                                    <label class="live-status-class">Live</label>
+    <div fxLayout="column" id="list-wrapper">
+        <mat-label class="header-label">Online Queues</mat-label> 
+        <mat-list role="list" fxLayout="column" class="queue-list">
+            <mat-list-item *ngFor="let queue of queues" class="list-item">
+                <mat-card id="queueComponent">
+                   
+                    <mat-card-content >
+                        <div fxLayout="column" class="queue-box-container">
+                            <div fxLayout="row" id="row1">
+                                <label id="dateTimeLabel" class="content-header-label">Queue Sheduled</label>
+                                <!-- <div class="live-indicator"><label id="liveLabel">Live</label></div> -->
+                            </div>
+                            <div fxLayout="row" id="row2">
+                                <div fxLayout="row" class="content-text-div-left">
+                                    <label class="content-text-label">Status</label>
+                                    <div class="live-status-container">
+                                        <label class="live-status-class">Live</label>
+                                    </div>
+                
+                
                                 </div>
-            
-            
+                                <div fxLayout="row" class="content-text-div-right">
+                                    <label class="content-text-label">Booking Starting</label>
+                                    <label class="content-text-value">9:00 AM Today (1 hr 30 min 58 sec)</label>
+                                </div>
+                
                             </div>
-                            <div fxLayout="row" class="content-text-div-right">
-                                <label class="content-text-label">Booking Starting</label>
-                                <label class="content-text-value">9:00 AM Today (1 hr 30 min 58 sec)</label>
+                
+                            <div fxLayout="row" id="row2">
+                                <div fxLayout="row" class="content-text-div-left">
+                                    <label class="content-text-label">Fees</label>
+                                    <label class="content-text-value">&#8377; 251</label>
+                                </div>
+                                <div fxLayout="row" class="content-text-div-right">
+                                    <label class="content-text-label">Consulting Starting</label>
+                                    <label class="content-text-value">11:00 AM Today (1 hr 30 min 58 sec)</label>
+                                </div>
                             </div>
-            
-                        </div>
-            
-                        <div fxLayout="row" id="row2">
-                            <div fxLayout="row" class="content-text-div-left">
-                                <label class="content-text-label">Fees</label>
-                                <label class="content-text-value">&#8377; 251</label>
-                            </div>
-                            <div fxLayout="row" class="content-text-div-right">
-                                <label class="content-text-label">Consulting Starting</label>
-                                <label class="content-text-value">11:00 AM Today (1 hr 30 min 58 sec)</label>
-                            </div>
-                        </div>
-                        <div fxLayout="row" id="row2">
-                            <div fxLayout="row" class="content-text-div-left">
-                                <label class="content-text-label">Patient Limit</label>
-                                <label class="content-text-value">800</label>
-                            </div>
-                            <div fxLayout="row" class="content-text-div-right">
-                                <label class="content-text-label">Live queue size</label>
-                                <label class="content-text-value">270</label>
+                            <div fxLayout="row" id="row2">
+                                <div fxLayout="row" class="content-text-div-left">
+                                    <label class="content-text-label">Patient Limit</label>
+                                    <label class="content-text-value">800</label>
+                                </div>
+                                <div fxLayout="row" class="content-text-div-right">
+                                    <label class="content-text-label">Live queue size</label>
+                                    <label class="content-text-value">270</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </mat-card-content>
-            
-                <!-- <mat-card-actions></mat-card-actions>
-                <mat-card-footer></mat-card-footer> -->
-            </mat-card>
-        </mat-list-item>
-    </mat-list>
-    
-   
+                    </mat-card-content>
+                
+                    <!-- <mat-card-actions></mat-card-actions>
+                    <mat-card-footer></mat-card-footer> -->
+                </mat-card>
+            </mat-list-item>
+        </mat-list>
+        
+        <mat-label class="header-label">Offline Queues</mat-label> 
 
+        <mat-list role="list" fxLayout="column" class="queue-list">
+            <mat-list-item *ngFor="let queue of queues" class="list-item">
+                <mat-card id="queueComponent">
+                   
+                    <mat-card-content >
+                        <div fxLayout="column" class="queue-box-container">
+                            <div fxLayout="row" id="row1">
+                                <label id="dateTimeLabel" class="content-header-label">Queue Sheduled</label>
+                                <!-- <div class="live-indicator"><label id="liveLabel">Live</label></div> -->
+                            </div>
+                            <div fxLayout="row" id="row2">
+                                <div fxLayout="row" class="content-text-div-left">
+                                    <label class="content-text-label">Status</label>
+                                    <div class="live-status-container">
+                                        <label class="live-status-class">Live</label>
+                                    </div>
+                
+                
+                                </div>
+                                <div fxLayout="row" class="content-text-div-right">
+                                    <label class="content-text-label">Booking Starting</label>
+                                    <label class="content-text-value">9:00 AM Today (1 hr 30 min 58 sec)</label>
+                                </div>
+                
+                            </div>
+                
+                            <div fxLayout="row" id="row2">
+                                <div fxLayout="row" class="content-text-div-left">
+                                    <label class="content-text-label">Fees</label>
+                                    <label class="content-text-value">&#8377; 251</label>
+                                </div>
+                                <div fxLayout="row" class="content-text-div-right">
+                                    <label class="content-text-label">Consulting Starting</label>
+                                    <label class="content-text-value">11:00 AM Today (1 hr 30 min 58 sec)</label>
+                                </div>
+                            </div>
+                            <div fxLayout="row" id="row2">
+                                <div fxLayout="row" class="content-text-div-left">
+                                    <label class="content-text-label">Patient Limit</label>
+                                    <label class="content-text-value">800</label>
+                                </div>
+                                <div fxLayout="row" class="content-text-div-right">
+                                    <label class="content-text-label">Live queue size</label>
+                                    <label class="content-text-value">270</label>
+                                </div>
+                            </div>
+                        </div>
+                    </mat-card-content>
+                
+                    <!-- <mat-card-actions></mat-card-actions>
+                    <mat-card-footer></mat-card-footer> -->
+                </mat-card>
+            </mat-list-item>
+        </mat-list>
+    
+    </div>
+   
     <button mat-fab class="create-queue-fab" aria-label="Creat Queue" (click)="goToCreateQueue()">
         <mat-icon>add</mat-icon>
     </button>
