--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,9 @@
 
 @import "~bootstrap/dist/css/bootstrap.css";
 
-html, body { 
-  height: 100%; 
-  /* position: relative; */
-}
+
+
+html, body { height: 100%; width: 100%; }
 body { margin: 0;
 overflow: hidden;
 }
