--- a/src/app/patient-registration/patient-registration.component.css
+++ b/src/app/patient-registration/patient-registration.component.css
@@ -2,32 +2,6 @@
     height: 100%;
     background-color: #ffffff;
 }
-#leftContainer{
-    
-    height: 100%;
-    overflow: auto;
-}
-#rightContainer{
-    background-color: thistle;
-    height: 100%;
-    background-image: url('src/assets/imgs/doctor_register_temp.jpg');
-    z-index: 10px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.header-label{
-    font-size: 30px;
-    font-family: roboto-bold;
-}
-.register-button{
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: #0F9D58;
-    color: white;
-}
-
-/* new layout */
 #meetupImage{
     max-width: 201.5px;
     max-height: 100.25px;
@@ -55,20 +29,17 @@
 .mat-icon{
     color: #476282;
 }
-.temp{
-    background-color: blueviolet;
-}
+
 .back-button{
     width: fit-content;
     color:#476282;
     outline: none;
     border: 0;
 }
-.next-button{
-    width: fit-content;
+.register-button{
     color: white;
     background-color: #4285F4;
-    align-self: flex-end;
+    width: 100%;
     outline: none;
     border: 0;
 }
@@ -103,12 +74,4 @@
     height: fit-content;
     width: fit-content;
     overflow: auto;
-}
-.location-map{
-    width: 500px;
-    height: 450px;
-}
-.location-icon{
-    color: #DB4437;
-    font-size: 16px;
 }
