--- a/src/app/patient-registration/patient-registration.component.html
+++ b/src/app/patient-registration/patient-registration.component.html
@@ -116,7 +116,7 @@
             <div id="contentRight" fxFlexOffset.xs="0" fxFlexOffset="25px" fxFlex="1 1 auto" fxLayout="row" fxLayoutAlign="center center">
               <div *ngIf="stepper.selectedIndex !== 2" fxLayout="column" class="img-wrapper">
                 <img class="right-image" matCardImageMedium src= 'assets/imgs/re_account_temp.svg' />
-                <mat-label class="right-label">Helps you connect your patients online</mat-label>
+                <mat-label class="right-label">Helps you connect your doctors online</mat-label>
               </div>                    
             </div>
           </div>
