--- a/src/app/create-account-bottom-sheet/create-account-bottom-sheet.component.html
+++ b/src/app/create-account-bottom-sheet/create-account-bottom-sheet.component.html
@@ -1,7 +1,7 @@
 <div class="parent-div" fxLayout="column" fxLayoutGap="40px">
     <img id="meetupImage" src="/assets/imgs/meetup_logo_with.png" alt="Meetup Logo">
     <button class="patient-button" mat-raised-button type="button" fxFlexOffset="10px" (click)="openPatientReg()" >Patient Registration</button>
-    <button class="doctor-button" mat-flat-button type="button" (click)="openDoctorReg()">Doctor Registration</button>
+    <button class="doctor-button green-button" mat-flat-button type="button" (click)="openDoctorReg()">Doctor Registration</button>
     <span fxFlex="1 1 10px"></span>
     
 </div>
