--- a/src/app/doctor-registration/doctor-registration.component.html
+++ b/src/app/doctor-registration/doctor-registration.component.html
@@ -1,5 +1,4 @@
 <div id="parent" fxLayout="column" fxLayoutAlign="center center">
-
   
     <form [formGroup]="registrationForm" #f="ngForm" fxFlex.xs="100%" (ngSubmit)="onSubmit(f)" class="registration-form" fxLayout="column">
       <mat-progress-bar *ngIf="showProgressBar" mode="indeterminate" id="progressIndicator" color="primary"></mat-progress-bar>
@@ -177,7 +176,7 @@
 
               <div fxLayout="row" fxFlexOffset="10px">
 
-                  <button class="back-button" mat-flat-button matStepperPrevious type="button" >Back</button>
+                  <button class="back-button lighter-button" mat-flat-button matStepperPrevious type="button" >Back</button>
                   <span fxFlex="1 1 auto"></span>
                   <button class="next-button" mat-flat-button matStepperNext type="button" [disabled]="!personalForm.valid" (click)="loadAddressFormData()">Next</button>
                 </div>
@@ -272,7 +271,7 @@
 
 
                 <div fxLayout="row" fxFlexOffset="10px">
-                  <button class="back-button" mat-flat-button matStepperPrevious type="button" >Back</button>
+                  <button class="back-button lighter-button" mat-flat-button matStepperPrevious type="button" >Back</button>
                   <span fxFlex="1 1 auto"></span>
                   <button class="next-button" mat-flat-button matStepperNext type="submit"  [disabled]="!addressForm.valid">Submit</button>
                 </div>
