--- a/src/app/feature-modules/doctor/create-queue/create-queue.component.html
+++ b/src/app/feature-modules/doctor/create-queue/create-queue.component.html
@@ -1,97 +1,207 @@
-<div class="queue-form-parent">
-    <form [formGroup]="queueForm" #f="ngForm" (ngSubmit)="onSubmit(f)" class="create-queue-container">
-        <!-- <div class="create-queue-container"> -->
-    
-            
-            <div fxLayout="column" fxLayoutGap="20px">
+<div id="parent" fxLayout="column" fxLayoutAlign="center center">
 
-                <span fxFlex="1 1 10px"></span>
-                <mat-label fxLayoutAlign="center center"  class="header-label">Create Queue</mat-label>
-                <span fxFlex="1 1 20px"></span>
-                <mat-form-field appearance="outline">
-                    <mat-label>Enter Number Of Patients</mat-label>
-                    <input matInput type="number" placeholder="Queue Size e.g 100" formControlName="numberOfPatients">
-                    <mat-error *ngIf="numberOfPatients.touched && numberOfPatients.errors?.required">
-                        You must provide patient limit
-                    </mat-error>
-                </mat-form-field>
+
+<form [formGroup]="queueForm" #f="ngForm" fxFlex.xs="100%" (ngSubmit)="onSubmit(f)" class="queue-form" fxLayout="column">
+
+    <mat-progress-bar *ngIf="showProgressBar" mode="indeterminate" id="progressIndicator" color="primary"></mat-progress-bar>
+
+    <mat-card class="reg-card">
+
+      <mat-card-header >
+
+        <div fxLayout="column" fxFlexOffset="-8px">
+
+          <img class="logo-form-top" src="/assets/imgs/meetup_logo_with.png" alt="Meetup Logo" fxFlexOffset="25px">
+
+          <mat-label class="header-label" fxFlexOffset="10px">Create Queue</mat-label>
+
+        </div>
+      </mat-card-header>
+
+      <mat-card-content fxLayout="column">
+
         
-                <mat-form-field appearance="fill" fxFlex="1 1 auto">
-                    <mat-label>Choose Currency</mat-label>
-                    <mat-select formControlName="currency" [(value)]="slectedCurrency" >
-                        <mat-option value="INR">INR( &#8377; )</mat-option>
-                        <!-- <mat-option value="dolller">USD ( $ ) </mat-option> -->
-                    </mat-select>
-                    <mat-error *ngIf="currency.touched && currency.errors?.required">
-                        You must choose currency
-                    </mat-error>
-                </mat-form-field>
+
+        <div id="contentParent" fxLayout="row rwap" fxFlexOffset="30px" fxLayoutGap="20px">
+          
+          <div id="contentLeft">
+
+          <mat-horizontal-stepper  linear #stepper>
+            
+            <mat-step formGroupName="first" >
+
+              <div fxLayout="column" fxLayoutGap="8px" >
+
                 <mat-form-field appearance="outline">
-                    <mat-label>Declare your fees</mat-label>
-                    <input matInput type="number" placeholder="Fees e.g 300 Rs" formControlName="fees" (change)="onFeesChangedEvent($event)">
+                  <mat-label>Patients Limit</mat-label>
+                  <input matInput type="number" placeholder="Queue Size e.g 100" formControlName="numberOfPatients">
+                  <mat-error *ngIf="numberOfPatients.touched && numberOfPatients.errors?.required">
+                      Enter patient limit
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field appearance="outline" fxFlex="1 1 auto">
+                  <mat-label >Approximate time per patient</mat-label>
+                  <input matInput type="number" placeholder="Example 5 minutes" formControlName="aTimePerPatient">
+                  <mat-error *ngIf="aTimePerPatient.touched && aTimePerPatient.errors?.required">
+                    Enter approximate time per patient
+                  </mat-error>
+                  <mat-error *ngIf="aTimePerPatient.touched && aTimePerPatient.errors?.max">
+                    Maximum allowed time is {{aTimePerPatient.errors.max.max}} minutes
+                  </mat-error>
+                  <mat-error *ngIf="aTimePerPatient.touched && aTimePerPatient.errors?.min">
+                    Minimum allowed time is {{aTimePerPatient.errors.min.min}} minute
+                   
+                  </mat-error>
+                  <span matSuffix>Minutes</span>
+              </mat-form-field>
+                <mat-form-field appearance="outline" fxFlex="1 1 auto">
+                  <mat-label>Currency</mat-label>
+                  <mat-select formControlName="currency" [(value)]="slectedCurrency" >
+                      <mat-option value="INR">INR( &#8377; )</mat-option>                      
+                  </mat-select>
+                  <mat-error *ngIf="currency.touched && currency.errors?.required">
+                      Choose currency
+                  </mat-error>
+                 </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Fees</mat-label>
+                    <input matInput type="number" placeholder="Enter your consulting fees" formControlName="fees" (change)="onFeesChangedEvent($event)">
                     <mat-error *ngIf="fees.touched && fees.errors?.required">
-                        You must provide your fees
+                        Enter your fees
                     </mat-error>
                 </mat-form-field>
                 <mat-label >{{feeStructureText}}</mat-label>
-                <div fxLayout="row wrap" fxLayoutGap=10px>
-                    <mat-form-field appearance="outline" fxFlex="1 1 auto">
-                        <mat-label >Booking Start Time</mat-label>
-                        <input matInput readonly [ngxTimepicker]="startTimePicker" [format]=24 [(value)]='bookStartTime' formControlName="bStartTime">
-                        <mat-error *ngIf="bStartTime.touched && bStartTime.errors?.required">
-                            You must tell when your booking will start
-                        </mat-error>
-                        <ngx-material-timepicker [theme]="darkTheme"  #startTimePicker  (timeSet)="timeChangeBookStart($event)" ></ngx-material-timepicker>
-                        <mat-icon matSuffix (click)="startTimePicker.open()">access_time</mat-icon>
-                      </mat-form-field>
-                      <mat-form-field appearance="outline" fxFlex="1 1 auto">
-                        <mat-label >Booking End Time</mat-label>
-                        <input matInput readonly [ngxTimepicker]="endTimePicker" [min]="bookEndMin" [format]=24 [disabled]="!enableBookEnd"  [(value)]='bookEndTime' formControlName="bEndTime" >
-                        <mat-error *ngIf="bEndTime.touched && bEndTime.errors?.required">
-                            You must tell when your booking will end
-                        </mat-error>
-                        <ngx-material-timepicker [theme]="darkTheme" #endTimePicker  (timeSet)="timeChangeBookEnd($event)"></ngx-material-timepicker>
-                        <mat-icon *ngIf="enableBookEnd" matSuffix (click)="endTimePicker.open()" >access_time</mat-icon>
-                      </mat-form-field>
+
+                <div fxLayout="row" fxFlexOffset="10px">
+                  <span fxFlex="1 1 auto"></span>
+                  <button class="next-button" mat-flat-button matStepperNext type="button" [disabled]="!firstForm.valid">Next</button>
                 </div>
-                <div fxLayout="row wrap" fxLayoutGap=10px>
-                    <mat-form-field appearance="outline" fxFlex="1 1 auto">
-                        <mat-label >Consulting Start Time</mat-label>
-                        <input matInput readonly [ngxTimepicker]="cStartTimePicker" [format]=24  [min]="bookEndMin"  [disabled]="!enableBookEnd" [(value)]='consultingStartTime' formControlName="cStartTime" >
-                        <mat-error *ngIf="cStartTime.touched && cStartTime.errors?.required">
-                            You must tell when your consulting will start
-                        </mat-error>
-                        <ngx-material-timepicker [theme]="darkTheme" #cStartTimePicker (timeSet)="timeChangeConsultStart($event)"></ngx-material-timepicker>
-                        <mat-icon  *ngIf="enableBookEnd" matSuffix (click)="cStartTimePicker.open()">access_time</mat-icon>
-                      </mat-form-field>
-                      <mat-form-field appearance="outline" fxFlex="1 1 auto">
-                        <mat-label >Consulting End Time</mat-label>
-                        <input matInput readonly [ngxTimepicker]="cEndTimePicker" [format]=24  [min]="consultEndMin" [disabled]="!enableConsultingEnd" [(value)]='consultingEndTime' formControlName="cEndTime">
-                        <mat-error *ngIf="cEndTime.touched && cEndTime.errors?.required">
-                            You must tell when your consulting will end
-                        </mat-error>
-                        <ngx-material-timepicker [theme]="darkTheme" #cEndTimePicker (timeSet)="timeChangeConsultEnd($event)"></ngx-material-timepicker>
-                        <mat-icon *ngIf="enableConsultingEnd" matSuffix (click)="cEndTimePicker.open()" >access_time</mat-icon>
-                      </mat-form-field>
-    
-                     
-                </div>
-                <mat-form-field appearance="outline" fxFlex="1 1 auto">
-                    <mat-label >Approx average time per patient</mat-label>
-                    <input matInput  placeholder="Example 5 minutes" formControlName="aTimePerPatient">
-                    <mat-error *ngIf="aTimePerPatient.touched && aTimePerPatient.errors?.required">
-                        Please provide approximate time per patient
-                    </mat-error>
-                    <span matSuffix>Minutes</span>
-                </mat-form-field>
-                <div fxLayout="row wrap" fxLayoutGap=10px>
-                    <button mat-flat-button class="cancel-queue-button" fxFlex="1 1 40%" >Cancel</button>
-                    <button mat-flat-button class="next-patient-button-button" fxFlex="1 1 auto"  >Create Queue</button>
-                </div>
+
+              </div>   
+
+          </mat-step>
+
+        <mat-step formGroupName="second">
+
+            <div fxLayout="column" fxLayoutGap="8px" >
+              <mat-form-field appearance="outline" fxFlex="1 1 auto">
+                <mat-label >Booking Start Time</mat-label>
+                <input matInput readonly [ngxTimepicker]="startTimePicker" [format]=24 [(value)]='bookStartTime' formControlName="bStartTime">
+                <mat-icon matSuffix (click)="startTimePicker.open()">access_time</mat-icon>
+                <mat-error *ngIf="bStartTime.touched && bStartTime.errors?.required">
+                    You must tell when your booking will start
+                </mat-error>
+                <ngx-material-timepicker [theme]="darkTheme"  #startTimePicker  (timeSet)="timeChangeBookStart($event)" ></ngx-material-timepicker>
                
-            </div>
+              </mat-form-field>
+              <mat-form-field appearance="outline" fxFlex="1 1 auto">
+                <mat-label >Booking End Time</mat-label>
+                <input matInput readonly [ngxTimepicker]="endTimePicker" [min]="bookEndMin" [format]=24 [disabled]="!enableBookEnd"  [(value)]='bookEndTime' formControlName="bEndTime" >
+                <mat-icon *ngIf="enableBookEnd" matSuffix (click)="endTimePicker.open()" >access_time</mat-icon>
+                <mat-error *ngIf="bEndTime.touched && bEndTime.errors?.required">
+                    You must tell when your booking will end
+                </mat-error>
+                <ngx-material-timepicker [theme]="darkTheme" #endTimePicker  (timeSet)="timeChangeBookEnd($event)"></ngx-material-timepicker>
+                
+              </mat-form-field>
+
+              <mat-form-field appearance="outline" fxFlex="1 1 auto">
+                <mat-label >Consulting Start Time</mat-label>
+                <input matInput readonly [ngxTimepicker]="cStartTimePicker" [format]=24  [min]="bookEndMin"  [disabled]="!enableBookEnd" [(value)]='consultingStartTime' formControlName="cStartTime" >
+                <mat-icon  *ngIf="enableBookEnd" matSuffix (click)="cStartTimePicker.open()">access_time</mat-icon>
+                <mat-error *ngIf="cStartTime.touched && cStartTime.errors?.required">
+                    You must tell when your consulting will start
+                </mat-error>
+                <ngx-material-timepicker [theme]="darkTheme" #cStartTimePicker (timeSet)="timeChangeConsultStart($event)"></ngx-material-timepicker>
+                
+              </mat-form-field>
+
+              <mat-form-field appearance="outline" fxFlex="1 1 auto">
+                <mat-label >Consulting End Time</mat-label>
+                <input matInput readonly [ngxTimepicker]="cEndTimePicker" [format]=24  [min]="consultEndMin" [disabled]="!enableConsultingEnd" [(value)]='consultingEndTime' formControlName="cEndTime">
+                <mat-icon *ngIf="enableConsultingEnd" matSuffix (click)="cEndTimePicker.open()" >access_time</mat-icon>
+                <mat-error *ngIf="cEndTime.touched && cEndTime.errors?.required">
+                    You must tell when your consulting will end
+                </mat-error>
+                <ngx-material-timepicker [theme]="darkTheme" #cEndTimePicker (timeSet)="timeChangeConsultEnd($event)"></ngx-material-timepicker>
+               
+              </mat-form-field>
+
+              <div fxLayout="row" fxFlexOffset="10px">
+
+                <button class="lighter-button" mat-flat-button matStepperPrevious type="button" >Back</button>
+                <span fxFlex="1 1 auto"></span>
+                <button class="next-button" mat-flat-button matStepperNext type="button" [disabled]="!secondForm.valid || disableSubmit" >Next</button>
+              </div>
             
-    
-        <!-- </div> -->
-    </form>
+
+            </div>
+
+        </mat-step>
+
+
+        <mat-step >
+
+          <div fxLayout="column" fxLayoutGap="8px" >
+
+            <div fxLayout="row">
+              <div class="example-container">
+                <h2>Working Days</h2>
+              
+                <div
+                  cdkDropList
+                  #workingList="cdkDropList"
+                  [cdkDropListData]="workings"
+                  [cdkDropListConnectedTo]="[doneList]"
+                  class="example-list"
+                  (cdkDropListDropped)="drop($event)">
+                  <div class="example-box" *ngFor="let item of workings" cdkDrag>{{item}}</div>
+                </div>
+              </div>
+              
+              <div class="example-container">
+                <h2>Holidays</h2>
+              
+                <div
+                  cdkDropList
+                  #doneList="cdkDropList"
+                  [cdkDropListData]="holidays"
+                  [cdkDropListConnectedTo]="[workingList]"
+                  class="example-list"
+                  (cdkDropListDropped)="drop($event)">
+                  <div class="example-box" *ngFor="let item of holidays" cdkDrag>{{item}}</div>
+                </div>
+              </div>
+            </div>
+            <mat-label>*Drag and drop to change working days</mat-label>
+            <div fxLayout="row" fxFlexOffset="10px">
+
+              <button class="lighter-button" mat-flat-button matStepperPrevious type="button" >Back</button>
+              <span fxFlex="1 1 auto"></span>
+              <button class="next-button" mat-flat-button matStepperNext type="submit" [disabled]="!f.valid" >Submit</button>
+            </div>
+          
+
+          </div>
+
+      </mat-step>
+
+          </mat-horizontal-stepper>
+
+          </div>
+
+          
+          <div id="contentRight" fxFlexOffset.xs="0" fxFlexOffset="25px" fxFlex="1 1 auto" fxLayout="row" fxLayoutAlign="center center">
+            <div fxLayout="column" class="img-wrapper">
+              <img class="right-image" matCardImageMedium src= 'assets/imgs/re_account_temp.svg' />
+              <mat-label class="right-label">Helps you connect your patients online</mat-label>
+            </div>    
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+   
+</form>
+
+
 </div>
