--- a/src/app/feature-modules/doctor/live-queue/live-queue.component.html
+++ b/src/app/feature-modules/doctor/live-queue/live-queue.component.html
@@ -1,75 +1,102 @@
-<div fxLayout="column">
+<div class="parent" fxLayout="column" fxLayoutGap="15px" >
 
-    <ng-container *ngIf="!isKYCFilled">
+    <ng-container *ngIf="!session.getUserData().isKycSubmitted()">
             <div fxLayout="row" fxLayoutGap="10px" fxFlexOffset="15px" fxLayoutAlign="center center">
                 <mat-label class="no-kyc-label">*Before going live plese complete your registration</mat-label> 
                 <button mat-raised-button (click)="openKycForm()">complete now</button>
             </div>
     </ng-container>
 
-    <ng-container *ngIf="isKYCFilled">
-        <ng-container *ngIf="!isVarified">
+    <ng-container *ngIf="session.getUserData().isKycSubmitted()">
+        <ng-container *ngIf="!session.getUserData().isVarified()">
             <div fxLayout="row" fxLayoutGap="10px" fxFlexOffset="15px" fxLayoutAlign="center center">
                 <mat-label class="no-kyc-label">*We are currently verifying your account you will be live after verification process complete</mat-label>                 
             </div>
         </ng-container>
     </ng-container>
 
-    <mat-label class="header-label">Live Queues</mat-label> 
-    <mat-card id="queueComponent">
-    
-        <mat-card-content (click)="goToQueueDetails()">
-            <div fxLayout="column" class="queue-box-container">
-                <div fxLayout="row" id="row1">
-                    <label id="dateTimeLabel" class="content-header-label">Queue Sheduled</label>
-                    <!-- <div class="live-indicator"><label id="liveLabel">Live</label></div> -->
+    <mat-label class="header-label">Queues</mat-label> 
+
+    <div class="queues-container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="20px">
+
+        <mat-card class="queue-card"  *ngFor="let queue of session.getQueues()">
+           
+            <mat-card-content fxLayout="column" fxLayoutGap="15px">
+                <div fxLayout="row">
+                    <mat-slide-toggle [checked]="queue.isActive()" (change)="queueStatusChanged(queue)" color="primary">{{queue.isActive()?'Activated':'Deactivated'}}</mat-slide-toggle>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-spinner *ngIf="queue.isLoading()" class="spinner" [diameter]="20"></mat-spinner>
                 </div>
-                <div fxLayout="row" id="row2">
-                    <div fxLayout="row" class="content-text-div-left">
-                        <label class="content-text-label">Status</label>
-                        <div class="live-status-container">
-                            <label class="live-status-class">Live</label>
-                        </div>
-    
-    
-                    </div>
-                    <div fxLayout="row" class="content-text-div-right">
-                        <label class="content-text-label">Booking Starting</label>
-                        <label class="content-text-value">9:00 AM Today (1 hr 30 min 58 sec)</label>
-                    </div>
-    
+
+                <div fxLayout="row">
+                    <mat-label>Status</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-label >{{queue.getStatus()}}</mat-label>
                 </div>
-    
-                <div fxLayout="row" id="row2">
-                    <div fxLayout="row" class="content-text-div-left">
-                        <label class="content-text-label">Fees</label>
-                        <label class="content-text-value">&#8377; 251</label>
-                    </div>
-                    <div fxLayout="row" class="content-text-div-right">
-                        <label class="content-text-label">Consulting Starting</label>
-                        <label class="content-text-value">11:00 AM Today (1 hr 30 min 58 sec)</label>
-                    </div>
+                <div fxLayout="row" fxLayoutGap="30px">
+                    <mat-label>Fees</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-label >{{queue.getFees()}}</mat-label>
                 </div>
-                <div fxLayout="row" id="row2">
-                    <div fxLayout="row" class="content-text-div-left">
-                        <label class="content-text-label">Patient Limit</label>
-                        <label class="content-text-value">800</label>
-                    </div>
-                    <div fxLayout="row" class="content-text-div-right">
-                        <label class="content-text-label">Live queue size</label>
-                        <label class="content-text-value">270</label>
-                    </div>
+                <div fxLayout="row" fxLayoutGap="30px">
+                    <mat-label>Limit</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-label>{{queue.getPatientLimit()}}</mat-label>
                 </div>
-            </div>
+                <div fxLayout="row" fxLayoutGap="30px">
+                    <mat-label>Booking Start Time</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-label>{{utils.millisToTimeString(queue.getBookingStarting())}}</mat-label>
+                </div>
+                <div fxLayout="row" fxLayoutGap="30px">
+                    <mat-label>Booking End Time</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-label>{{utils.millisToTimeString(queue.getBookingEnding())}}</mat-label>
+                </div>
+                <div fxLayout="row" fxLayoutGap="30px">
+                    <mat-label>Consulting Start Time</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-label>{{utils.millisToTimeString(queue.getConsultingStarting())}}</mat-label>
+                </div>
+                <div fxLayout="row" fxLayoutGap="30px">
+                    <mat-label>Consulting End Time</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-label>{{utils.millisToTimeString(queue.getConsultingEnding())}}</mat-label>
+                </div>
+                <mat-accordion>
+                    <mat-expansion-panel >
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                         More options
+                        </mat-panel-title>
+                        <mat-panel-description>
+                          <span fxFlex="1 1 auto"></span><mat-icon>settings</mat-icon>
+                        </mat-panel-description>
+                      </mat-expansion-panel-header>
+                     <div fxLayout="column">
+                        <button  mat-flat-button class="setting-buttons" (click)="editQueue(queue)">Edit</button>
+                        <button  mat-flat-button class="alert-button setting-buttons" fxFlexOffset="10px" (click)="deleteQueue(queue)">Delete</button>
+                     </div>
+                    </mat-expansion-panel>
+                  </mat-accordion>
+            </mat-card-content>
+        </mat-card>
+    </div>
+
+    <mat-label class="header-label">Earning Graph</mat-label> 
+
+    <mat-card #myDiv class="graph-card" fxLayout="row" fxLayoutAlign="center center" >
+        <mat-card-content id="graphContent" fxLayout="row"  >
+
         </mat-card-content>
-    
-        <!-- <mat-card-actions></mat-card-actions>
-        <mat-card-footer></mat-card-footer> -->
     </mat-card>
+
+
     <mat-label class="header-label">Live Payments</mat-label> 
+
     <table mat-table
            [dataSource]="dataSource" multiTemplateDataRows
-           class="mat-elevation-z8"
+           class="mat-elevation-z8 payment-tabel"
            fxFlex="1 1 auto"
            >
       <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
@@ -88,20 +115,22 @@
         </td>
       </ng-container>
     
-      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      Expanded Content Column - The detail row is made up of this one column that spans across all columns
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-          <div class="example-element-detail"
+          <div class="element-detail"
                [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-            <div class="example-element-diagram">
-              <div class="example-element-position"> {{element.payeeName}} </div>
-              <div class="example-element-symbol"> {{element.symbol}} </div>
-              <div class="example-element-name"> {{element.payeeName}} </div>
-              <div class="example-element-weight"> {{element.weight}} </div>
-            </div>
+            
             <div class="example-element-description">
-              {{element.description}}
-              <span class="example-element-description-attribution"> -- Wikipedia </span>
+
+                <ng-container *ngIf="element.status === 'Authorized'">
+                    <span class="example-element-description-attribution"> -- When a patient book appointment in a queue this payment get authorised for you and will be confirm automatically when you completed appontment with patient</span>
+                </ng-container>
+                <ng-container *ngIf="element.status !== 'Authorized'">
+                    <span class="example-element-description-attribution"> -- This payment is now completed and will be transfered to your registered bank account</span>
+                </ng-container>
+              
+
             </div>
           </div>
         </td>
