--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,14 +35,14 @@
                         </mat-error>
                         </mat-form-field>
 
-                        <mat-label class="forgot-class" (click)="stepper.next()" >Forgot Password?</mat-label>
+                        <mat-label class="forgot-class bold-label" (click)="stepper.next()"  >Forgot Password?</mat-label>
                         
 
-                        <button class="login" mat-raised-button type="submit"  fxFlexOffset="30px" [disabled]="disableButtons">Log In</button>
+                        <button class="login" mat-raised-button type="submit"  fxFlexOffset="30px" [disabled]="disableButtons" >Log In</button>
 
                         <div class="hor-line"> </div>
                        
-                        <button class="create-account" mat-flat-button type="button" [disabled]="disableButtons" (click)="openBottomSheet()">Create Account</button>
+                        <button class="create-account green-button" mat-flat-button type="button" [disabled]="disableButtons" (click)="openBottomSheet()">Create Account</button>
                     </div>
                 </mat-step>
 
@@ -69,7 +69,7 @@
                             </mat-form-field>
 
                             <div fxLayout="row" fxFlexOffset="10px">
-                                <button class="back-button" mat-flat-button matStepperPrevious type="button" >Back</button>
+                                <button class="back-button lighter-button" mat-flat-button matStepperPrevious type="button" >Back</button>
                                 <span fxFlex="1 1 auto"></span>
                                 <button class="next-button" mat-raised-button type="submit" >Send Reset Email</button>
                               </div>
